migrate to java 17 / jakarta 10