@@ -65,40 +65,45 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
+    <java.version>17</java.version>
     <!-- maven plugins -->
-    <maven.checkstyle.version>3.1.1</maven.checkstyle.version>
-    <maven.clean.version>3.1.0</maven.clean.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.version>3.8.1</maven.compiler.version>
-    <maven.failsafe.version>2.22.2</maven.failsafe.version>
-    <maven.gpg.version>1.6</maven.gpg.version>
-    <maven.jar.version>3.2.0</maven.jar.version>
-    <maven.javadoc.version>3.2.0</maven.javadoc.version>
-    <maven.nexus.staging.version>1.6.8</maven.nexus.staging.version>
-    <maven.release.version>2.5.3</maven.release.version>
-    <maven.resources.version>3.1.0</maven.resources.version>
-    <maven.source.version>3.2.1</maven.source.version>
-    <maven.surefire.version>2.22.2</maven.surefire.version>
+    <maven.checkstyle.version>3.6.0</maven.checkstyle.version>
+    <maven.clean.version>3.4.0</maven.clean.version>
+    <maven.compiler.version>3.13.0</maven.compiler.version>
+    <maven.failsafe.version>3.5.2</maven.failsafe.version>
+    <maven.gpg.version>3.2.7</maven.gpg.version>
+    <maven.jar.version>3.4.2</maven.jar.version>
+    <maven.javadoc.version>3.11.1</maven.javadoc.version>
+    <maven.nexus.staging.version>1.7.0</maven.nexus.staging.version>
+    <maven.release.version>3.1.1</maven.release.version>
+    <maven.resources.version>3.3.1</maven.resources.version>
+    <maven.source.version>3.3.1</maven.source.version>
+    <maven.surefire.version>3.5.2</maven.surefire.version>
     <!-- dependencies -->
-    <assertj.version>3.16.1</assertj.version>
-    <checkstyle.version>8.33</checkstyle.version>
-    <javaee-api.version>8.0</javaee-api.version>
-    <junit.jupiter.version>5.6.2</junit.jupiter.version>
-    <logback.version>1.3.12</logback.version>
-    <mockito.version>3.3.3</mockito.version>
-    <payara.version>5.201</payara.version>
-    <slf4j.version>1.7.30</slf4j.version>
-    <spring.version>5.3.20</spring.version>
+    <assertj.version>3.26.3</assertj.version>
+    <checkstyle.version>10.20.2</checkstyle.version>
+    <glassfish.version>7.0.20</glassfish.version>
+    <jakartaee-api.version>10.0.0</jakartaee-api.version>
+    <junit.jupiter.version>5.11.3</junit.jupiter.version>
+    <logback.version>1.5.12</logback.version>
+    <mockito.version>5.14.2</mockito.version>
+    <payara.version>6.2024.11</payara.version>
+    <slf4j.version>2.0.16</slf4j.version>
+    <spring.version>6.2.0</spring.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>javax</groupId>
-        <artifactId>javaee-api</artifactId>
-        <version>${javaee-api.version}</version>
+        <groupId>jakarta.platform</groupId>
+        <artifactId>jakarta.jakartaee-api</artifactId>
+        <version>${jakartaee-api.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.main.extras</groupId>
+        <artifactId>glassfish-embedded-all</artifactId>
+        <version>${glassfish.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
@@ -276,6 +281,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven.surefire.version}</version>
+          <configuration>
+            <argLine>
+              --add-opens java.base/java.lang=ALL-UNNAMED
+            </argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.sonatype.plugins</groupId>
